// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > file > getFilesByModel > success 1`] = `
{
  "delete": [MockFunction spy],
  "find": [MockFunction spy] {
    "calls": [
      [
        {
          "modelId": "testModelId",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": [Circular],
      },
    ],
  },
  "findOne": [MockFunction spy],
  "save": [MockFunction spy],
}
`;

exports[`services > file > removeFile > success 1`] = `
{
  "delete": [MockFunction spy] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": [Circular],
      },
    ],
  },
  "find": [MockFunction spy],
  "findOne": [MockFunction spy] {
    "calls": [
      [
        {
          "_id": "testFileId",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": [Circular],
      },
    ],
  },
  "save": [MockFunction spy],
}
`;
